Fix sql migration & login